<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1d1d"
    tools:context=".fragments.ForgetPassword">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="top"
        android:text="@string/forgotp"
        android:textAppearance="@style/forgotp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user2"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_400sdp"
        android:background="@drawable/rectangle_26"
        android:hint="Enter your Email Address"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_35sdp"
        android:textColorHint="#676767"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/back3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text1"
        tools:ignore="LabelFor,MissingConstraints" />

    <ImageView
        android:id="@+id/USER1"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginEnd="@dimen/_230sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/mail"
        app:layout_constraintBottom_toBottomOf="@+id/user2"
        app:layout_constraintEnd_toEndOf="@+id/user2"
        app:layout_constraintStart_toStartOf="@+id/user2"
        app:layout_constraintTop_toTopOf="@id/user2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_350sdp"
        android:text="@string/line"
        android:textColor="#676767"
        app:layout_constraintBottom_toBottomOf="@id/back3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user2" />
    <TextView
        android:id="@+id/send_code"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_190sdp"
        android:layout_marginBottom="@dimen/_300sdp"
        android:gravity="top"
        android:text="@string/send_code"
        android:textAppearance="@style/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5" />

    <ImageView
        android:id="@+id/next_btn3"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_290sdp"
        android:background="@drawable/next_button"
        android:elevation="@dimen/_26sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text5" />
    <TextView
        android:id="@+id/back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_550sdp"
        android:layout_marginEnd="@dimen/_120sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal|top"
        android:text="@string/back"
        android:textAppearance="@style/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>