<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1d1d"
    tools:context=".fragments.SignUp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="top"
        android:text="@string/create_an_a"
        android:textAppearance="@style/create_an_a"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_35sdp"
        android:textSize="@dimen/_12sdp"
        android:textColorHint="#676767"
        android:hint="Email Address"
        android:background="@drawable/rectangle_26"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintBottom_toTopOf="@id/pass3"
        tools:ignore="LabelFor,MissingConstraints" />
    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_35sdp"
        android:textSize="@dimen/_12sdp"
        android:textColorHint="#676767"
        android:hint="Enter your name"
        android:background="@drawable/rectangle_26"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/user"
        tools:ignore="LabelFor,MissingConstraints" />
    <ImageView
        android:id="@+id/name"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginEnd="@dimen/_230sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/username"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/USER"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginEnd="@dimen/_230sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/user"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toTopOf="@+id/user"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass3"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_280sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_wit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#676767">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="Password"
            android:textColorHint="#676767"
            android:paddingStart="@dimen/_35sdp"
            android:background="@drawable/rectangle_26"
            tools:ignore="RtlSymmetry,TextSizeCheck">


        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repass"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_190sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_wit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass3"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#676767">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repass1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="Confirm Password"
            android:textColorHint="#676767"
            android:paddingStart="@dimen/_35sdp"
            android:background="@drawable/rectangle_26"
            tools:ignore="RtlSymmetry,TextSizeCheck">


        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/pass1"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_230sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/group_2"
        app:layout_constraintBottom_toBottomOf="@+id/pass3"
        app:layout_constraintEnd_toEndOf="@+id/pass3"
        app:layout_constraintStart_toStartOf="@+id/pass3"
        app:layout_constraintTop_toTopOf="@+id/pass3"
        tools:ignore="MissingConstraints" />



    <ImageView
        android:id="@+id/pass2"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_230sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/group_2"
        app:layout_constraintBottom_toBottomOf="@+id/repass"
        app:layout_constraintEnd_toEndOf="@+id/repass"
        app:layout_constraintStart_toStartOf="@+id/repass"
        app:layout_constraintTop_toTopOf="@+id/repass"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/by_clicking"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="top"
        android:text="@string/by_clicking"
        android:textAppearance="@style/by_clicking"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repass" />

    <TextView
        android:id="@+id/register"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/by_clicking"
        app:layout_constraintVertical_bias="0.170" />

    <ImageView
        android:id="@+id/next_btn"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/next_button"
        android:elevation="@dimen/_26sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/by_clicking"
        app:layout_constraintVertical_bias="0.140" />

    <TextView
        android:id="@+id/sign_up_wit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_127sdp"
        android:layout_marginEnd="@dimen/_126sdp"
        android:layout_marginBottom="@dimen/_105sdp"
        android:text="@string/sign_up_wit"
        app:layout_constraintTop_toBottomOf="@id/register"
        android:textAppearance="@style/sign_up_wit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/google1"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_180sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:background="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_wit1" />

    <ImageView
        android:id="@+id/apple"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_132sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_132sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:background="@drawable/apple_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_wit1" />

    <ImageView
        android:id="@+id/fb"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:background="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_wit1" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_550sdp"
        android:layout_marginEnd="@dimen/_120sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal|top"
        android:text="@string/back"
        android:textAppearance="@style/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>